src/objects/Underwriting__c.object
<CustomObject>
    <fields>
        <fullName>Overall_Merchant_Interview_Assessment__c</fullName>
        <label>Overall Merchant Interview Assessment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owned_Business_Since__c</fullName>
        <formula>Opportunity__r.Owned_Business_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned Business Since:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Off_Letter_Received__c</fullName>
        <formula>Opportunity__r.Paid_Off_Letter_Rec_d__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Off Letter Received?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Back_Amount__c</fullName>
        <formula>Opportunity__r.Pay_Back_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <formula>Opportunity__r.Payoff_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Paid_Off__c</fullName>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Payback__c</fullName>
        <formula>Opportunity__r.Percent_Payback__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Number_For_MI__c</fullName>
        <label>Merchant Interview Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PreQual_Decision_Time__c</fullName>
        <formula>IF 

(datevalue(Opportunity__r.PQ_Data_Entry_Date__c)=DATE(2013,01,18),

Abs(((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)-86),



IF

((Datevalue(Opportunity__r.Pre_Qual_Decision_Date__c) - datevalue(Opportunity__r.PQ_Data_Entry_Date__c))&gt;2,

Abs(((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)-62), 


IF

(ABS((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)&gt;10,

ABS((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)-((Datevalue(Opportunity__r.Pre_Qual_Decision_Date__c) - datevalue(Opportunity__r.PQ_Data_Entry_Date__c))*14),





(Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreQual Decision Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Applicant_2_FICO__c</fullName>
        <label>Previous Applicant #2 FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_FICO__c</fullName>
        <label>Previous Applicant #1 FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source__c</fullName>
        <formula>Opportunity__r.Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Info__c</fullName>
        <formula>&quot;Primary Contact Info:&quot;&amp; BR() 
&amp; &quot;Full Name: &quot;&amp; Contact__r.FirstName &amp; &quot; &quot; &amp;Contact__r.LastName &amp; BR() 
&amp; &quot;Ownership: &quot;&amp; text( Contact__r.OwnershipPercentage__c*100 )&amp;&quot;%&quot;&amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp; Contact__r.Principal_1_Street_Address__c &amp; BR() 
&amp; Contact__r.Principal_1_City__c &amp;&quot;, &quot;&amp; Contact__r.Principal_1_State__c &amp;&quot; &quot;&amp; Contact__r.Principal_1_Zip__c &amp; BR() 
&amp; &quot;Phone: &quot;&amp; Contact__r.Principal_Home_Phone__c  &amp; BR() 
&amp; &quot;Mobile: &quot;&amp; Contact__r.MobilePhone &amp; BR() 
&amp; &quot;Fax: &quot;&amp;Contact__r.Fax&amp; BR() 
&amp; &quot;Email: &quot;&amp; Contact__r.Email &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>text( Opportunity__r.Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Amount Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Funds__c</fullName>
        <formula>text( Opportunity__r.Purpose_of_Funds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purpose of Funds</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Calculator_Average__c</fullName>
        <formula>Opportunity__r.QC_Calculator_Average__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Calculator Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Calculator_Gross_Monthly_Sales__c</fullName>
        <formula>Opportunity__r.QC_Gross_Monthly_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Calculator Gross Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Decision_Date__c</fullName>
        <formula>Opportunity__r.Data_Entry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QC_Decision_Time__c</fullName>
        <formula>if 

( isnull ( UW_Assigned_Date_Stamp__c ) ,NULL , 

IF 

(datevalue(Submit_to_UW_Processing__c)=DATE(2013,01,18),

Abs(((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)-86),



IF

((Datevalue(UW_Assigned_Date_Stamp__c) - datevalue(Submit_to_UW_Processing__c))&gt;2,

Abs(((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)-62), 


IF

(ABS((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)&gt;10,

ABS((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)-((Datevalue(UW_Assigned_Date_Stamp__c) - datevalue(Submit_to_UW_Processing__c))*14),




(UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Decision Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QC_Start_Date__c</fullName>
        <formula>Opportunity__r.Calculate_Due_Dates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Start Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RE_Decision_Date__c</fullName>
        <label>RE-Decision Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Re_Price_Reasons__c</fullName>
        <inlineHelpText>When new reason added, please update &quot;Re_Price_Reasons&quot; formula field in Opp Object</inlineHelpText>
        <label>Re-Price Reasons:</label>
        <picklist>
            <picklistValues>
                <fullName>1st &amp; 2nd month ROI &lt; 50% Ren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st &amp; 2nd months ROI &lt; 60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st month ROI &lt; 50% Ren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st month ROI &lt; 60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding/Removing a Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank statement do not support GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Statement negative ending balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC statements do not match Sales pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changing Product Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Committee Re-price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently Underperforming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline in CC Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet Swift Fico Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated Duration exceeds 240 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds max split for business type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds Max Term for ROI 40-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excessive Returned Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase due to competitor balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflated Gross Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Batching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Batching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Fico Score-Swift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant requested higher advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant requested less monies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant requested lower split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer offer Product Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Prohibited List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall Performance ROI too low</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <label>Amount Sold Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Number__c</fullName>
        <formula>Opportunity__r.Renewal_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <formula>if( Opportunity__r.Renewal__c ,&quot;YES&quot;,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rescind_Reason__c</fullName>
        <label>Rescind Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Canadian Merchant on Hold Until Further Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Establish Landlord Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Establish Merchant Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to Re-price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Batching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant couldn&apos;t/ wouldn&apos;t produce docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant couldn&apos;t /wouldn&apos;t produce processing docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant does not like pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Does Not Want to Switch Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Does Not Want to Switch Processors or Do RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant is No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Not Cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Processor will Not Accept RMB Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant unaware of requirement to payoff outstanding advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant wants to wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant went with competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving into New Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner taking too long to Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescinded by Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Produce Approved Funding Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Satisfy Funding Condition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SCF_Alert__c</fullName>
        <formula>Opportunity__r.QC_SCF_Alert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCF Alert:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Loan_Docs__c</fullName>
        <label>Sent Loan Docs</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_Loan_Docs_Received__c</fullName>
        <label>Signed Loan Docs Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submit_to_UW_Processing__c</fullName>
        <formula>Opportunity__r.Submit_to_UW_Processing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit to UW &amp; Processing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syndication_Amount__c</fullName>
        <formula>Opportunity__r.Syndication_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Syndication Amount:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Open__c</fullName>
        <formula>text( Opportunity__r.Tax_Liens_Open__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Liens Open:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Programs__c</fullName>
        <label>Test Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI 40 -49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM-Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Company_Name__c</fullName>
        <label>Third Party Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Payoff_Amount__c</fullName>
        <label>Third Party Payoff Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_Payoff__c</fullName>
        <label>Third Party Payoff</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_party_underwriting_notes__c</fullName>
        <label>Third party underwriting notes:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Repay_Amount__c</fullName>
        <label>Total Transactions Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Entity__c</fullName>
        <formula>TEXT( Opportunity__r.Type_of_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Entity:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Landlord__c</fullName>
        <label>Type of Landlord:</label>
        <picklist>
            <picklistValues>
                <fullName>Management Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative/Family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCC_Acknowledgement_Date__c</fullName>
        <label>UCC Acknowledgement Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UCC_File_Number__c</fullName>
        <label>UCC File Number:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCC_Filing_Reason__c</fullName>
        <label>UCC Filing Reason:</label>
        <picklist>
            <picklistValues>
                <fullName>Addendum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCC_Filings__c</fullName>
        <label>UCC Filings:</label>
        <picklist>
            <picklistValues>
                <fullName>Full UCC-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification UCC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCC_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UCC Ordered:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UCC_Request_Date__c</fullName>
        <label>UCC Request Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UW_Assigned_Date_Stamp__c</fullName>
        <label>UW Assigned Date Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UW_Decision_Days__c</fullName>
        <formula>if

( isnull (Decision_Date__c) ,NULL ,

IF 

(and(datevalue(UW_Assigned_Date_Stamp__c)=DATE(2013,01,18), datevalue(Decision_Date__c)&gt;DATE(2013,01,21), datevalue(Decision_Date__c)&lt;DATE(2013,01,25)),

Abs((Decision_Date__c -  UW_Assigned_Date_Stamp__c)-3),

if

((Decision_Date__c -  UW_Assigned_Date_Stamp__c)&gt;2.25,

(Decision_Date__c -  UW_Assigned_Date_Stamp__c)-2,

Decision_Date__c -  UW_Assigned_Date_Stamp__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UW Decision Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UW_Processing_Notes__c</fullName>
        <label>UW Notes to Processing/Risk Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UW_able_to_confirm_Entity_Type__c</fullName>
        <label>UW able to confirm Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Underwriter_Assigned__c</fullName>
        <label>Underwriter Assigned:</label>
        <picklist>
            <picklistValues>
                <fullName>AUTO DECISION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT COMMITTEE OVERIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erick G.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Dye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leilani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pamela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shapour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theresa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Underwriter_s_Score__c</fullName>
        <label>Underwriter&apos;s Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Underwriting_Decision__c</fullName>
        <label>Underwriting Decision:</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Credit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Credit Committee with conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by Credit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined - Pending Management Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Management Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending management review returned to u/w</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescinded by merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescinded by Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescinded by RapidAdvance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescinded by Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled for credit committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified - Comp. Pay Off too High - Reconsider Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified - Will Not Reconsider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified - Will Reconsider in the Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <description>When adding a new value, add same in OPP object.</description>
        <label>Unqualified Reason</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;12 Separate Daily Deposits Per Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account in Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Not on Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor balance is too high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Advance Payoff Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet Loan Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Meet Minimum Monthly Credit Card Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop in CC Sales Month over Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop in CC Sales Year over Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligibility Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than $2500 per month in credit card processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than $3500 per month in credit card processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 12 deposits per day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 1 Year in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 3 months in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 9 months remaining on lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Advance Amount Loan Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant applying does not have majority ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum advance amount $2500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum advance amount $5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving to new location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Tax Liens/Judgments not under payment plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Existing Payoff Figures Balance &gt;$50K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Net Amount too Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant Decrease in Credit Card Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Accept CC Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorized Sub Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_businesses_are_nearby__c</fullName>
        <label>What businesses are nearby?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_plan_to_use_the_money_for__c</fullName>
        <label>What do you plan to use the money for?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_hours_are_you_open__c</fullName>
        <label>What hours are you open?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_primary_leaseholder_s_name__c</fullName>
        <label>What is the primary leaseholder&apos;s name?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_value_of_their_home__c</fullName>
        <label>What is the value of their home?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_their_home_mortgage_balance__c</fullName>
        <label>What is their home mortgage balance?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_your_busy_season__c</fullName>
        <label>What is your busy season?</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consistent year round</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_is_your_current_balance__c</fullName>
        <label>What is your current balance?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>